--- a/css/responsividade_index.css
+++ b/css/responsividade_index.css
@@ -4,13 +4,94 @@
     box-sizing: border-box;
 } */
 
+@media(min-width: 1025px) and (max-width:1200px){
+    .cabecalho{
+        display: flex;
+        
+       }
 
-@media(min-width: 360px) and (max-width:767px){
+       header nav {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10rem;
+        width: 90vw;
+        }
     div#carousel #carousel-image{
         /* border: solid 5px black; */
-        height: 8.5rem;
+        height: 19rem;
         margin-top: 3rem; 
-        border: solid 5px blue;
+        /* border: solid 5px blue; */
+    } 
+
+    div#carousel-title a {
+        text-decoration: none;
+    }
+
+    div#carousel-title { 
+        margin-top: 2rem;
+        /* border: solid 5px yellow; */
+    }
+
+    footer div {
+        display: inline;
+        float: right;
+        margin-right: 0px;
+    }
+}
+
+@media(min-width: 901px) and (max-width:1024px){
+    .cabecalho{
+        display: flex;
+        
+       }
+
+       header nav {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10rem;
+        width: 90vw;
+        }
+    div#carousel #carousel-image{
+        /* border: solid 5px black; */
+        height: 19rem;
+        margin-top: 3rem; 
+        /* border: solid 5px blue; */
+    } 
+
+    div#carousel-title a {
+        text-decoration: none;
+    }
+
+    div#carousel-title { 
+        margin-top: 2rem;
+        /* border: solid 5px yellow; */
+    }
+
+    footer div {
+        display: inline;
+        float: right;
+        margin-right: 0px;
+    }
+
+}
+
+@media(min-width: 768px) and (max-width:900px){
+    .cabecalho{
+        display: flex;
+        
+       }
+
+       header nav {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10rem;
+        width: 90vw;
+        }
+    div#carousel #carousel-image{
+        /* border: solid 5px black; */
+        height: 17rem;
+        margin-top: 3rem; 
+        /* border: solid 5px blue; */
     } 
 
     div#carousel-title a {
@@ -19,7 +100,7 @@
 
     div#carousel-title { 
         margin-top: 0px;
-        border: solid 5px yellow;
+        /* border: solid 5px yellow; */
     }
 
     footer div {
@@ -31,33 +112,81 @@
 }
 
 
+@media(min-width: 580px) and (max-width:767px){
 
 
-@media(min-width:320px) and (max-width:359px) {
+    .cabecalho{
+        display: flex;
+        
+       }
+
+       header nav {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10rem;
+        width: 90vw;
+        }
+    div#carousel #carousel-image{
+        /* border: solid 5px black; */
+        height: 13rem;
+        margin-top: 3rem; 
+        /* border: solid 5px blue; */
+    } 
+
+    div#carousel-title a {
+        text-decoration: none;
+    }
+
+    div#carousel-title { 
+        margin-top: 0px;
+        /* border: solid 5px yellow; */
+    }
+
+    footer div {
+        display: inline;
+        float: right;
+        margin-right: 0px;
+    }
+
+}
+
+
+@media(min-width:320px) and (max-width:579px) {
 
    .logo{
     width: 5rem;
    } 
 
+   header div {
+    display: flex;
+    flex-direction: column;
+    }
    header nav {
     display: flex;
+    flex-direction: column;
     margin-right: 10rem;
-    width: 100vw;
+    width: 80vw;
     }
 
     header nav a {
     color: #1351d8;
-    font-size: 12px;
+    font-size: 1rem;
     text-decoration: none;
     font-weight: 900;
     margin-left: 14px;
     margin-right: 14px;
    }
+   
+   
+   .cabecalho{
+    display: flex;
+    flex-direction: column;
+   }
     div#carousel #carousel-image{
         /* border: solid 5px black; */
         height: 8.5rem;
         margin-top: 3rem; 
-        border: solid 5px green;
+        /* border: solid 5px green; */
     } 
     
     /* main #carousel{
@@ -65,7 +194,7 @@
 
     div#carousel-title { 
         margin-top: 0px;
-        border: solid 5px black;
+        /* border: solid 5px black; */
     }
     
     nav#social {
