--- a/css/lancamento.css
+++ b/css/lancamento.css
@@ -15,6 +15,7 @@ ul.modelcars li {
 img.photocar {
     display: block;
     width: 250px;
+    
 }
 
 .checkbox {
@@ -48,23 +49,37 @@ img.photocar {
 table {
     border-collapse: collapse;
     width: 80%;
+    height: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2vh;
     margin-bottom: 10px;
+    /* border: solid 5px green; */
   }
   
   th, td {
     text-align: left;
     padding: 8px;
+    
+  }
+
+  td{
+    /* border: solid 5px blue;  */
+  }
+
+  th{
+    /* border: solid 5px red; */
   }
 
   td:nth-child(1) {  
-    font-weight: 700;
-    width: 40%;
-  }
+    font-weight: 700; /* as imagens dentro da table */
 
-  tr:nth-child(even) {background-color: #f2f2f2;}
+    width: 40%;
+    border: solid 5px #1351d8;
+  }
+  tr:nth-child(even) {background-color: #f2f2f2;
+    border: solid 5px yellow;    
+}
 
 div#compare {
     position: absolute;
