--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,14 @@ div#carousel {
     transition: all .3s ease-in-out;
 }
 
+
+
 div#carousel img{
-    /* border: solid 5px blue; */
+    border: solid 5px blue;
     height: 30rem;
     margin-top: 10rem;
 }
+
 
 div#carousel-title a {
     text-decoration: none;
