--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ div#carousel {
 
 
 div#carousel img{
-    border: solid 5px blue;
+    /* border: solid 5px blue; */
     height: 30rem;
     margin-top: 10rem;
 }
@@ -38,6 +38,7 @@ div#carousel img{
 
 div#carousel-title a {
     text-decoration: none;
+    color: black;
 }
 
 div#carousel-title  {
