--- a/css/responsividade_index.css
+++ b/css/responsividade_index.css
@@ -4,6 +4,42 @@
     box-sizing: border-box;
 } */
 
+@media(min-width: 1281px) and (max-width:1601px){
+    .cabecalho{
+        display: flex;
+        
+       }
+       header nav {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10rem;
+        width: 90vw;
+        }
+    div#carousel #carousel-image{
+        /* border: solid 5px black; */
+        height: 25rem;
+        margin-top: 8.5rem; 
+        /* border: solid 5px blue; */
+    } 
+
+    div#carousel-title a {
+        text-decoration: none;
+        font-style: black
+;
+    }
+
+    div#carousel-title { 
+        margin-top: 8rem;
+        /* border: solid 5px yellow; */
+    }
+
+    footer div {
+        display: inline;
+        float: right;
+        margin-right: 0px;
+    }
+}
+
 @media(min-width: 1025px) and (max-width:1280px){
     .cabecalho{
         display: flex;
