--- a/css/form.css
+++ b/css/form.css
@@ -9,10 +9,18 @@
     padding: 5px;
 }
 
+.fordform:hover {
+    outline: none;
+    border: 2px solid #007bff;
+    box-shadow: 2px 2px 5px 3px rgba(0, 0, 255, 0.5);
+
+}
+
 select.fordform {
     width: 310px;
     height: 36px;
     color: #807d7d;
+
 }
 
 input:focus-visible {
