--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+.cabecalho a{
+    transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
+    color: #1351d8;
+}
+
+.cabecalho a:hover{
+    transform: scale(2.0);
+    font-size: 1.5rem;
+}
+
 body {
     background: #FFFFFF;
     display: flex;
@@ -27,14 +37,20 @@ div#carousel {
     transition: all .3s ease-in-out;
 }
 
-
-
-div#carousel img{
-    /* border: solid 5px blue; */
+#carousel-image {
     height: 30rem;
     margin-top: 10rem;
     border-radius: 4%;
+    object-fit: cover;
+    transition: opacity 1s ease-in-out;
+    opacity: 1;
 }
+
+/* div#carousel img{
+    height: 30rem;
+    margin-top: 10rem;
+    border-radius: 4%;
+} */
 
 
 div#carousel-title a {
@@ -110,9 +126,19 @@ nav#social {
     width: 80%;
 }
 
-nav#social ul img {
+.icone-redes{
     width: 28px;
+	height: auto;
+    transition: transform 0.2s ease-in-out;
 }
+
+.icone-redes:hover{
+    transform: scale(1.3);
+}
+
+/* nav#social ul img {
+    width: 28px;
+} */
 
 span.redesociais {
     color: #ffffff;
@@ -149,3 +175,5 @@ button {
     border: 0px;
     border-radius: 10px;
 }
+
+
