--- a/css/form.css
+++ b/css/form.css
@@ -10,6 +10,13 @@
     /* border: solid 1px black; */
 }
 
+#botao_enviar:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    color: #666;
+    border: none;
+  }
+
 .fordform:hover {
     outline: none;
     border: 2px solid #007bff;
